--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <i class="icon" data-feather="gift"></i><h3>Horas Abonadas (Mês)</h3><div class="value" id="bonified-hours-display">00:00</div>
                     </div>
                     <div class="metric-card positive">
-                        <i class="icon" data-feather="trending-up"></i><h3>Saldo do Mês</h3><div class="value" id="current-month-balance">00:00</div>
+                        <i class="icon" data-feather="trending-down"></i><h3>Saldo do Mês</h3><div class="value" id="current-month-balance">00:00</div>
                     </div>
                     <div class="card days-summary-card">
                         <div><h3>Dias Cumpridos</h3><div class="value" id="days-completed">0</div></div>
@@ -333,7 +333,7 @@
                         <div><h3>Dias Restantes</h3><div class="value" id="days-remaining">0</div></div>
                     </div>
                     <div class="card holiday-card">
-                        <h3>Próximos Feriados</h3>
+                        <h3>Próximos Feriados (Brasil)</h3>
                         <ul id="holiday-list" class="holiday-list"></ul>
                     </div>
                 </aside>
